--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+  "name": "your-project",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build", // <--- Look at this line!
+    "start": "next start",
+    "lint": "next lint"
+  },
+  // ... other stuff
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
